add transition from checkbox_icon

--- a/css/styles.css
+++ b/css/styles.css
@@ -772,6 +772,8 @@ img {
 
     border: 1px solid #000000;
     border-radius: 2px;
+
+    transition: var(--time-distribution);
 }
 .checkbox:checked + .checkbox_icon {
     border: none;
